# RePak

gui/: CMakeLists.txt
gui/resources/styles/: dark.qss
gui/src/: main.cpp
gui/src/core/: asset.cpp  asset.h  buildmanager.cpp  buildmanager.h  project.cpp  project.h  repakprocess.cpp  repakprocess.h  settings.cpp  settings.h
gui/src/editors/: asseteditorbase.cpp  asseteditorbase.h  datatableeditor.cpp  datatableeditor.h  materialeditor.cpp  materialeditor.h  modeleditor.cpp  modeleditor.h  shadereditor.cpp  shadereditor.h  shareditor.cpp  shareditor.h  textureeditor.cpp  textureeditor.h  uiatlaseditor.cpp  uiatlaseditor.h
gui/src/models/: assetfilterproxymodel.cpp  assetfilterproxymodel.h  assetlistmodel.cpp  assetlistmodel.h  assettreemodel.cpp  assettreemodel.h
gui/src/tools/: batchoperationsdialog.cpp  batchoperationsdialog.h  compressiondialog.cpp  compressiondialog.h  guidcalculatordialog.cpp  guidcalculatordialog.h  pakinspectordialog.cpp  pakinspectordialog.h  uimghashdialog.cpp  uimghashdialog.h  validationreportdialog.cpp  validationreportdialog.h
gui/src/ui/: aboutdialog.cpp  aboutdialog.h  mainwindow.cpp  mainwindow.h  preferencesdialog.cpp  preferencesdialog.h  projectsettingsdialog.cpp  projectsettingsdialog.h
gui/src/utils/: fileutils.cpp  fileutils.h  guidcalculator.cpp  guidcalculator.h  jsonutils.cpp  jsonutils.h  validation.cpp  validation.h
gui/src/widgets/: assetbrowser.cpp  assetbrowser.h  assetfilterwidget.cpp  assetfilterwidget.h  buildlogwidget.cpp  buildlogwidget.h  buildprogresswidget.cpp  buildprogresswidget.h  projectdashboard.cpp  projectdashboard.h  statusbar.cpp  statusbar.h
